fix user_name is null
