# controller/login.go
@@ -14,8 +14,8 @@ import (
 
 // LoginPayload ...
 type LoginPayload struct {
-	Email    string `json:"Email"`
-	Password string `json:"Password"`
+	Email    string `json:"email"`
+	Password string `json:"password"`
 }
 
 // Login ...
