# docs/swagger.json
@@ -158,6 +158,42 @@
                 }
             }
         },
+        "/images/pullImage": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "拉去镜像",
+                "tags": [
+                    "docker"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "推送成功"
+                    }
+                }
+            }
+        },
+        "/images/pushImage": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "推送镜像",
+                "tags": [
+                    "docker"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "推送成功"
+                    }
+                }
+            }
+        },
         "/images/reTagImage": {
             "get": {
                 "security": [
@@ -188,6 +224,24 @@
                 "responses": {
                     "200": {
                         "description": "重命名成功"
+                    }
+                }
+            }
+        },
+        "/images/saveImage": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "保存镜像到本地",
+                "tags": [
+                    "docker"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "保存成功"
                     }
                 }
             }
@@ -250,10 +304,10 @@
         "controller.LoginPayload": {
             "type": "object",
             "properties": {
-                "Email": {
+                "email": {
                     "type": "string"
                 },
-                "Password": {
+                "password": {
                     "type": "string"
                 }
             }
